--- a/src/styles/mixins/_border-radius.scss
+++ b/src/styles/mixins/_border-radius.scss
@@ -1,7 +1,9 @@
+@use "../variables/border-radius";
+
 @mixin border-radius-s {
-    border-radius: $border-radius-s;
+    border-radius: border-radius.$border-radius-s;
 }
 
 @mixin border-radius-m {
-    border-radius: $border-radius-m;
+    border-radius: border-radius.$border-radius-m;
 }
