--- a/src/styles/mixins/index.scss
+++ b/src/styles/mixins/index.scss
@@ -1,9 +1,9 @@
-@import "accessibility";
-@import "border-radius";
-@import "container";
-@import "highlighted-text";
-@import "images";
-@import "line-clamp";
-@import "responsive";
-@import "shadows";
-@import "typography";
+@forward "accessibility";
+@forward "border-radius";
+@forward "container";
+@forward "highlighted-text";
+@forward "images";
+@forward "line-clamp";
+@forward "responsive";
+@forward "shadows";
+@forward "typography";
