--- a/src/components/ContentRenderer/components/Attachment/Attachment.module.scss
+++ b/src/components/ContentRenderer/components/Attachment/Attachment.module.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .container {
     @include border-radius-m;
 
@@ -29,7 +31,7 @@
 
 .name {
     font-size: $font-size-s;
-    line-height: $font-size-s * 4/3;
+    line-height: math.div($font-size-s * 4, 3);
 
     margin: 0 auto $spacing-half;
     overflow: hidden;
@@ -43,7 +45,7 @@
 
 .meta {
     font-size: $font-size-xs;
-    line-height: $font-size-xs * 5/4;
+    line-height: math.div($font-size-xs * 5, 4);
 
     margin: 0 auto;
     color: var(--prezly-text-color-tertiary);
