--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,2 +1,30 @@
 /* https://tailwindcss.com/docs/upgrade-guide#using-a-prefix  */
 @import "tailwindcss" prefix(tw);
+
+@theme inline {
+    --color-link: #00a0dd;
+}
+
+/* figtree-latin-wght-normal */
+@font-face {
+    font-family: "Figtree Variable";
+    font-style: normal;
+    font-display: swap;
+    font-weight: 300 900;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/figtree:vf@latest/latin-wght-normal.woff2)
+        format("woff2-variations");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304,
+        U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+:root {
+    /* Overriding: src/modules/Head/components/getCssVariables.ts */
+    --prezly-font-family: "Figtree Variable", Arial Bold, Arial, sans-serif;
+    * {
+      font-family: var(--prezly-font-family);
+    }
+}
+
+a {
+    color: #00a0dd !important;
+}
